# airflow-provider-energy-metrics

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: run_tests.yml
src/energy_metrics/: __init__.py  hook.py  listener.py
tests/: conftest.py  helpers.py  test_hook.py  test_listener.py
